# IfFootball

./: .env.example  .gitignore  .npmrc  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  app.py  package-lock.json  package.json  pyproject.toml
.streamlit/: config.toml
config/: targets.toml
config/simulation_rules/: adaptation.toml  match.toml  turning_points.toml
data/demo_cache/: arsenal.db  chelsea.db  chelsea_w16.db  chelsea_w25.db  leicester_city.db  liverpool.db  liverpool_w29.db  manchester_city.db  manchester_united.db  manchester_united_w29.db  tottenham_hotspur.db  tottenham_hotspur_w29.db
data/season_cache/: premier_league_2015-16.db
docs/: CHANGELOG.md  simulation-rules.md
docs/samples/: structured_explanation_sample.json
prompts/: action_explanation_v1.md  input_structuring_v1.md  knowledge_query_v1.md  report_generation_ja_v1.md  report_generation_v1.md  structured_explanation_v1.md
scripts/: backtest_van_gaal.py  build_demo_cache.py  build_season_cache.py  inspect_manager_sensitivity.py  preview_presets.py  preview_report_generation.py
src/iffootball/: candidates.py  config.py  incoming_profile.py  pipeline.py  presets.py  scenario.py
tests/: test_config.py  test_incoming_profile.py  test_pipeline.py
tests/agents/: test_trigger.py
tests/collectors/: test_statsbomb.py
tests/converters/: test_fixture_stats.py  test_manager_stats.py  test_stats_to_attributes.py  test_team_stats.py
tests/llm/: test_action_explanation.py  test_explanation_completion.py  test_input_structuring.py  test_knowledge_query.py  test_report_adapter.py  (+1 more)
(+63 files in other folders)
