[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "iffootball"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "statsbombpy==1.17.0",
    "pandas==2.3.3",
    "numpy==2.4.2",
    "matplotlib==3.10.8",
    "streamlit==1.45.0",
    "python-dotenv==1.2.2",
    "openai==2.28.0",
    "anthropic==0.84.0",
    "google-genai==1.67.0",
    "groq==1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.9.9",
    "mypy==1.19.1",
    "pandas-stubs==3.0.0.260204",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iffootball"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
strict = true
